# avalia-o-de-logica-de-programa-o

./: Análise_de_Lista_de_Valores.cpp  CMakeLists.txt  Questao_1.cpp  Questao_2.cpp  Questao_4.cpp
