cmake_minimum_required(VERSION 4.2)
project(avalia_o_de_logica_de_programa_o)

set(CMAKE_CXX_STANDARD 14)

add_executable(avalia_o_de_logica_de_programa_o
        Questao_1.cpp)
add_executable(Questao_1 Questao_1.cpp)
add_executable(Questao_2 Questao_2.cpp)
add_executable(new_target Análise_de_Lista_de_Valores.cpp)
add_executable(Questao_4 Questao_4.cpp)
